--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "html-webpack-exclude-empty-assets-plugin": "^0.1.0",
     "webpack-concat-plugin": "^2.4.2",
     "script-ext-html-webpack-plugin": "^1.8.8",
-    "mustache-loader": "^1.4.0"
+    "mustache-loader": "^1.4.0",
+    "compression-webpack-plugin": "^1.1.11"
   }
 }
