--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,8 @@ node_js:
   - "8"
 dist: trusty
 services:
-  - docker
   - node
-  
+
 branches:
   except:
     - /^pr\..*/
@@ -17,57 +16,34 @@ branches:
     - master
     - develop
     - /^v[0-9]+\.){0,2}(\*|[0-9]+
-    #- /^deploy-.*$/
+
 cache:
   directories:
-    - $HOME/.djantajs/
+    - $HOME/.djantaio/
 
 before_install:
-  # Parameters used during release
   - git config user.name "$GH_USER"
   - git config user.email "$GH_USER_EMAIL"
-  # setup https authentication credentials, used by ./mvnw release:prepare
   - git config credential.helper "store --file=.git/credentials"
   - echo "https://$GH_TOKEN:@github.com" > .git/credentials
 
 install:
-  # Override default travis to use the maven wrapper
-  #- mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
-
-script:
-  #- ./.travis/publish.sh
-
-after_script:
-  - docker images
+  - npm run git-submodule
+  - npm i
 
 after_success:
-  # Run the coverage test routine
-  #- npm run coverage
-
   # Only continue for 'develop' or 'release/*' branches
   - if [ "$TRAVIS_BRANCH" =~ "^(develop$|feature//*)" ]; then
-      #docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD";
-      #docker push djantaio/djantajs-docker-server:"$TRAVIS_BRANCH";
       echo "Trigged branch= $TRAVIS_BRANCH"
+    else
+      npm run build
     fi
-
-#Deploiment process
-deploy:
-  provider: npm
-  email: npmjs@djanta.io
-  skip_cleanup: true
-  on:
-    tags: true
-    repo: djantaio/djantajs
-    all_branches: false
-    node: 7
 
 notifications:
   email: false
   slack:
     rooms:
-      - djantaio:1GeeSv1noSekK9to1yTqsbDw#travis-ci
-      - djantaio:1GeeSv1noSekK9to1yTqsbDw#djantajs
+      - djantaio:1GeeSv1noSekK9to1yTqsbDw#djantaio
     on_success: always
     #on_failure: always
     template:
