--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ sudo: false
 language: node_js
 node_js:
   - "6"
-  - "7"
-  - "8"
 dist: trusty
 services:
   - node
@@ -17,19 +15,16 @@ branches:
     - develop
     - /^v[0-9]+\.){0,2}(\*|[0-9]+
 
-cache:
-  directories:
-    - $HOME/.djantaio/
-
 before_install:
   - git config user.name "$GH_USER"
   - git config user.email "$GH_USER_EMAIL"
   - git config credential.helper "store --file=.git/credentials"
   - echo "https://$GH_TOKEN:@github.com" > .git/credentials
+  - echo .git/credentials #console print out
 
 install:
-  - npm run git-submodule
   - npm i
+  - npm run git-submodule
 
 after_success:
   # Only continue for 'develop' or 'release/*' branches
